--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
   font-family: Lato-Light;
   font-size: 3.2rem;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 6rem;
 }
 
 img {
@@ -46,11 +46,15 @@ summary {
   font-family: Lato-Bold;
   font-size: 1.6rem;
   /* background-color: rgba(120, 99, 254, 0); */
-  border: .1rem solid rgb(119, 99, 254) ;
+  border: 0.1rem solid rgb(119, 99, 254);
   padding: 1rem;
   margin-bottom: 1rem;
   box-shadow: 0.3rem 0.3rem 0.4rem rgb(184, 184, 184);
-  transition: 0.3s all;
+  transition: 0.2s all;
+}
+
+summary::marker {
+  color: rgb(119, 99, 254);
 }
 
 summary:hover {
@@ -65,8 +69,27 @@ ul {
   padding-left: 4rem;
 }
 
-li {
+li,
+label {
+  display: block;
+  padding: 1rem 0 1rem 3rem;
   font-family: Lato-Regular;
   font-size: 1.6rem;
   margin-bottom: 1rem;
+  transition: 0.2s all;
+}
+
+input {
+  display: none;
+}
+
+input:checked + label {
+  background-color: rgb(119, 99, 254);
+  color: white;
+}
+
+label:hover {
+  background-color: rgb(119, 99, 254);
+  color: white;
+  cursor: pointer;
 }
