--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ summary {
   /* background-color: rgba(120, 99, 254, 0); */
   border: 0.1rem solid rgb(119, 99, 254);
   padding: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   box-shadow: 0.3rem 0.3rem 0.4rem rgb(184, 184, 184);
   transition: 0.2s all;
 }
@@ -71,11 +71,9 @@ ul {
 
 li,
 label {
-  display: block;
   padding: 1rem 0 1rem 3rem;
   font-family: Lato-Regular;
   font-size: 1.6rem;
-  margin-bottom: 1rem;
   transition: 0.2s all;
 }
 
@@ -92,4 +90,25 @@ label:hover {
   background-color: rgb(119, 99, 254);
   color: white;
   cursor: pointer;
+}
+
+.vocabulare {
+margin-bottom: 2rem;
+}
+
+@media (max-width: 900px) {
+  body {
+    padding: 2rem;
+  }
+  details {
+    width: 100%;
+  }
+  summary {
+    font-size: 1.8rem;
+    padding: 3rem;
+  }
+  label {
+    padding: 1rem 0 1rem 1rem;
+    font-size: 1.6rem;
+  }
 }
