--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,10 @@ html {
   font-size: 10px;
 }
 
+/* Динамическое изменение внутреннег отступа, чтобы страница не дергалась при раскрытии карточек */
+
 body {
-  padding: 5rem;
+  padding: 5rem calc(5rem - (100vw - 100%)) 5rem 5rem;
 }
 
 h1 {
@@ -32,8 +34,8 @@ h1 {
   font-size: 3.2rem;
   letter-spacing: 0.4rem;
   text-align: center;
-  margin-bottom: 6rem;
   padding: 1rem;
+  margin-bottom: 6rem;
   border: 0.1rem solid rgb(119, 99, 254);
   box-shadow: 0.3rem 0.3rem 0.4rem rgb(184, 184, 184);
 }
