--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --main-color: rgb(119, 99, 254);
+  --shadow-color: rgb(184, 184, 184);
+  --second-color: white;
+}
+
 @font-face {
   font-family: Lato-Regular;
   src: url(/fonts/Lato/Lato-Regular.ttf);
@@ -26,7 +32,8 @@ html {
 /* Динамическое изменение внутреннег отступа, чтобы страница не дергалась при раскрытии карточек */
 
 body {
-  padding: 5rem calc(5rem - (100vw - 100%)) 5rem 5rem;
+  position: relative;
+  padding: 5rem calc(5rem - (100vw - 100%)) 2rem 5rem;
 }
 
 h1 {
@@ -36,8 +43,9 @@ h1 {
   text-align: center;
   padding: 1rem;
   margin-bottom: 6rem;
-  border: 0.1rem solid rgb(119, 99, 254);
-  box-shadow: 0.3rem 0.3rem 0.4rem rgb(184, 184, 184);
+  border: 0.1rem solid var(--main-color);
+  box-shadow: 0.3rem 0.3rem 0.4rem var(--shadow-color);
+  cursor: pointer;
 }
 
 details {
@@ -47,10 +55,10 @@ details {
 summary {
   font-family: Lato-Bold;
   font-size: 1.6rem;
-  border: 0.1rem solid rgb(119, 99, 254);
+  border: 0.1rem solid var(--main-color);
   padding: 1rem;
   margin-bottom: 0.7rem;
-  box-shadow: 0.3rem 0.3rem 0.4rem rgb(184, 184, 184);
+  box-shadow: 0.3rem 0.3rem 0.4rem var(--shadow-color);
   transition: 0.2s all;
 }
 
@@ -59,7 +67,7 @@ summary::marker {
 }
 
 i {
-  color: rgb(119, 99, 254);
+  color: var(--main-color);
   margin-right: 10px;
 }
 
@@ -90,8 +98,8 @@ input {
 }
 
 input:checked + label {
-  background-color: rgb(119, 99, 254);
-  color: white;
+  background-color: var(--main-color);
+  color: var(--second-color);
 }
 
 input:checked + label::before {
@@ -103,31 +111,31 @@ input:checked + label::before {
 }
 
 .vocabulare:hover {
-  color: rgb(119, 99, 254);
-  border-bottom: 1px solid rgb(119, 99, 254);
+  color: var(--main-color);
+  border-bottom: 1px solid var(--main-color);
 }
 
 label:hover > label::before {
   transform: scale(110%);
 }
 
-@media (max-width: 900px) {
-  body {
-    padding: 2rem;
-  }
-  details {
-    width: 100%;
-  }
-  summary {
-    font-size: 1.8rem;
-    padding: 3rem;
-  }
-  .vocabulare {
-    padding: 0.3rem 0 0.3rem 3rem;
-  }
-  label {
-    padding: 0.4rem 0.5rem;
-    font-size: 1.6rem;
-    line-height: 175%;
-  }
+.settings-panel {
+  display: none;
+  height: 100%;
+  width: 100%;
+  background-color: var(--main-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+hr {
+  margin: 2rem 0 2rem 0;
+}
+
+footer {
+  font-size: 1.6rem;
+  font-family: Lato-Light;
+  text-align: center;
 }
